--- a/contact.html
+++ b/contact.html
@@ -60,13 +60,13 @@
             </p>
         </div>
         <footer>
-            <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+            <div class="contact-box justify-content-between align-items-center mb-5 d-none d-md-flex">
                 <div>
                     <h3>Work Inquiry</h3>
                     <p class="text-muted">Let's work together!</p>
                 </div>
                 <div>
-                    <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Laurel">Contact me</a>
+                    <a href="/contact.html" class="btn btn-branding" title="Contact Laurel">Contact me</a>
                 </div>
             </div>
             <div class="d-flex justify-content-center mb-5">
