--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <nav class="d-flex justify-content-between">
             <a href="/" title="Homepage">
-                <img src="/images/logopurple.png" class="logo" alt="Laurel logo">
+                <img src="/images/logocolor.png" class="logo" alt="Laurel logo">
             </a>
             <ul>
                 <li class="active">
@@ -44,7 +44,7 @@
     </div>
     <div class="hero">
         <div class="row align-items-center">
-            <div class="col-md-8">
+            <div class="col-lg-8">
                 <p class="mb-3">Hello, I'm</p>
                 <h1>Laurel Rubel</h1>
                 <h2 class="mb-5">Front-end developer based in Denver, Colorado</h2>
@@ -52,7 +52,7 @@
                     <a href="/contact.html" class="btn btn-branding mt-2" title="Contact me">Contact me</a>
                 </div>
             </div>
-            <div class="col-md-4 d-flex align-items-start">
+            <div class="col-lg-4 d-flex align-items-start">
                 <img src="/images/laurelrubel.png" class="img-fluid portrait" alt="Laurel Rubel">
             </div>
         </div>
@@ -133,13 +133,13 @@
             </div>
         </div>
         <footer>
-            <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+            <div class="contact-box justify-content-between align-items-center mb-5 d-none d-md-flex">
                 <div>
                     <h3>Work Inquiry</h3>
                     <p class="text-muted">Let's work together!</p>
                 </div>
                 <div>
-                    <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Laurel">Contact me</a>
+                    <a href="/contact.html" class="btn btn-branding" title="Contact Laurel">Contact me</a>
                 </div>
             </div>
             <div class="d-flex justify-content-center mb-5">
