--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
                 </a>
             </div>
             <p class="text-center mt-5">
-                ✌️ This project was coded by Laurel Rubel and is
+                ✌️ This website was coded by Laurel Rubel and is
                 <a href="https://github.com/LaurelFR/portfolio-project" target="_blank">open-sourced on
                     GitHub</a>
             </p>
