--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
                 </a>
             </div>
             <p class="text-center mt-5">
-                ✌️ This project was coded by Laurel Rubel and is
+                ✌️ This website was coded by Laurel Rubel and is
                 <a href="https://github.com/LaurelFR/portfolio-project">open-sourced on GitHub</a>
             </p>
         </footer>
