--- a/contact.html
+++ b/contact.html
@@ -45,19 +45,42 @@
     <div class="content-container container">
         <div class="content contact-content">
             <h1 class="mb-5">Let's get in touch!</h1>
-            <h3>Email</h3>
-            <p>
-                <a href="mailto:laurel.rubel@gmail.com" target="_blank" title="Email Laurel">laurel.rubel@gmail.com</a>
-            </p>
-            <h3>GitHub</h3>
-            <p>
-                <a href="https://github.com/LaurelFR" target="_blank" title="GitHub Profile">LaurelFR</a>
-            </p>
-            <h3>LinkedIn</h3>
-            <p>
-                <a href="https://www.linkedin.com/in/laurelrubel/" target="_blank" title="LinkedIn Profile">Laurel
-                    Rubel</a>
-            </p>
+            <div class="row">
+                <div class="col-md-8">
+                    <form action="https://formspree.io/f/xleyjlla" method="POST" class="border p-3 rounded mb-3">
+                        <div class="mb-3">
+                            <label class="form-label">Name:</label>
+                            <input type="text" class="form-control" />
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Email Address:</label>
+                            <input type="email" name="_replyto" class="form-control" required autofocus />
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Message:</label>
+                            <textarea name="message" class="form-control"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-branding">Send</button>
+                    </form>
+                </div>
+                <div class="col-md-4">
+                    <h3>Email</h3>
+                    <p>
+                        <a href="mailto:laurel.rubel@gmail.com" target="_blank"
+                            title="Email Laurel">laurel.rubel@gmail.com</a>
+                    </p>
+                    <h3>GitHub</h3>
+                    <p>
+                        <a href="https://github.com/LaurelFR" target="_blank" title="GitHub Profile">LaurelFR</a>
+                    </p>
+                    <h3>LinkedIn</h3>
+                    <p>
+                        <a href="https://www.linkedin.com/in/laurelrubel/" target="_blank"
+                            title="LinkedIn Profile">Laurel
+                            Rubel</a>
+                    </p>
+                </div>
+            </div>
         </div>
         <footer>
             <div class="contact-box justify-content-between align-items-center mb-5 d-none d-md-flex">
